<resources>
	<string name="app_name">Geo Dude!</string>
	<string name="name_input">Enter your name!</string>
	<string name="start_btn">START</string>
	<string name="question_txt">Which country does this flag belong to?</string>
	<string name="left_arrow">Left arrow</string>
	<string name="right_arrow">Right arrow</string>
	<string name="country_flag">Country flag</string>
	<string name="option_placeholder">Option</string>
	<string name="restart_btn">Restart Quiz</string>
	<string name="result_score">You got %1$s out of 10 correct!</string>
	<string name="cheat_btn"><i><u>CHEAT?</u></i></string>
	<string name="cheats_remained_txt">Cheats remained: %1$s</string>
	<string name="cheat_used">Cheats used: %1$s</string>
	<string name="score_board">Score Board</string>
	<string name="view_scores"><u><i>View Scores</i></u></string>
	<string name="score_name"><u>Name</u></string>
	<string name="score_text"><u>Score</u></string>
	<string name="score_date"><u>Date</u></string>
	<string name="back_btn"><u>Back</u></string>
</resources>