<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/bg_primary_90"
	android:padding="16dp">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="80dp"
		android:src="@drawable/ic_logo"
		android:contentDescription="@string/app_name" />

	<TextView
		android:id="@+id/titleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/score_board"
		android:textSize="34sp"
		android:textStyle="bold"
		android:fontFamily="@font/dynamo_condensed"
		android:letterSpacing="0.04"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="26dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingStart="10dp"
		android:paddingEnd="10dp"
		android:background="@drawable/score_title_bg">

		<TextView
			android:id="@+id/scoreNameTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="8"
			android:textSize="14sp"
			android:textStyle="bold"
			android:textColor="@color/on_primary"
			android:text="@string/score_name" />

		<TextView
			android:id="@+id/scoreTextTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:textSize="14sp"
			android:layout_marginStart="6dp"
			android:layout_marginEnd="2dp"
			android:textStyle="bold"
			android:textColor="@color/on_primary"
			android:text="@string/score_text" />

		<TextView
			android:id="@+id/dateTextTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:textSize="14sp"
			android:textStyle="bold"
			android:textColor="@color/on_primary"
			android:text="@string/score_date" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/attemptsLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
	</LinearLayout>

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/backBtn"
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="30dp"
		android:backgroundTint="@color/secondary"
		android:textColor="@color/on_secondary"
		android:fontFamily="@font/dynamo_condensed"
		android:letterSpacing="0.04"
		android:textSize="16sp"
		android:text="@string/back_btn" />
</LinearLayout>