<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:padding="16dp"
	android:background="@drawable/bg_main"
	tools:context=".activity.ResultActivity">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="120dp"
		android:src="@drawable/ic_logo"
		android:contentDescription="@string/app_name" />

	<TextView
		android:id="@+id/resultText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="24sp"
		android:textColor="@color/black"
		android:fontFamily="@font/dynamo_condensed"
		android:gravity="center"
		tools:text="@string/result_score"
		android:layout_marginBottom="22dp" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/restartBtn"
		android:text="@string/restart_btn"
		android:layout_width="220dp"
		android:layout_height="wrap_content"
		android:textColor="@color/on_primary"
		android:backgroundTint="@color/primary"
		android:fontFamily="@font/dynamo_condensed"
		android:textSize="22sp"
		android:letterSpacing="0.04" />

</androidx.appcompat.widget.LinearLayoutCompat>