<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.QuestionActivity"
	android:background="@drawable/bg_question"
	android:orientation="vertical"
	android:paddingBottom="40dp"
	android:gravity="center">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:paddingStart="14dp"
		android:paddingEnd="14dp"
		tools:ignore="UseCompoundDrawables">

		<ImageView
			android:src="@drawable/ic_logo"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_gravity="center_vertical"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="0dp"
			android:contentDescription="@string/app_name" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/question_txt"
			android:textColor="@color/on_primary"
			android:fontFamily="@font/archivo_black"
			android:letterSpacing="0.06"
			android:lineHeight="26sp"
			android:textSize="20sp"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="16dp"
			android:layout_gravity="center_vertical"
			android:gravity="center"
			android:textDirection="inherit"
			android:background="@drawable/bg_box"
			tools:targetApi="p" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="16dp"
		android:paddingStart="32dp"
		android:paddingEnd="22dp">

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:weightSum="10"
			android:orientation="horizontal"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginStart="0dp"
			android:layout_marginEnd="10dp">

			<ProgressBar
				android:id="@+id/progressBar"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="10"
				android:progress="90"
				android:indeterminate="false"
				android:progressDrawable="@drawable/ft_progress_bar"
				style="?android:attr/progressBarStyleHorizontal" />

		</androidx.appcompat.widget.LinearLayoutCompat>

		<ImageView
			android:id="@+id/prevBtn"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="12dp"
			android:src="@drawable/ic_left_arrow"
			android:contentDescription="@string/left_arrow" />

		<ImageView
			android:id="@+id/nextBtn"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:padding="12dp"
			android:src="@drawable/ic_right_arrow"
			android:contentDescription="@string/right_arrow"
			android:layout_marginStart="4dp"
			android:layout_marginEnd="0dp" />

	</LinearLayout>

	<ImageView
		android:id="@+id/countryFlag"
		android:layout_gravity="center_horizontal"
		android:layout_width="220dp"
		android:layout_height="180dp"
		android:layout_marginTop="16dp"
		android:contentDescription="@string/country_flag"
		tools:src="@drawable/au" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingStart="50dp"
		android:paddingEnd="50dp"
		android:layout_marginTop="20dp"
		android:orientation="vertical">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/optionOne"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="@string/option_placeholder"
			android:background="@drawable/bg_btn"
			android:fontFamily="@font/dynamo_condensed"
			android:letterSpacing="0.06"
			android:textColor="@color/on_logo"
			android:textSize="16sp"
			android:layout_marginTop="0dp" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/optionTwo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="@string/option_placeholder"
			android:background="@drawable/bg_btn"
			android:fontFamily="@font/dynamo_condensed"
			android:letterSpacing="0.06"
			android:textColor="@color/on_logo"
			android:textSize="16sp"
			android:layout_marginTop="14dp" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/optionThree"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="@string/option_placeholder"
			android:background="@drawable/bg_btn"
			android:fontFamily="@font/dynamo_condensed"
			android:letterSpacing="0.06"
			android:textColor="@color/on_logo"
			android:textSize="16sp"
			android:layout_marginTop="14dp" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/optionFour"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="@string/option_placeholder"
			android:background="@drawable/bg_btn"
			android:fontFamily="@font/dynamo_condensed"
			android:letterSpacing="0.06"
			android:textColor="@color/on_logo"
			android:textSize="16sp"
			android:layout_marginTop="14dp" />

	</LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>